syntax = "proto3";

package argus;

service Argusd {
  rpc CreateWatch(ArgusdConfig) returns (ArgusdHandle) {}
  rpc DestroyWatch(ArgusdConfig) returns (Empty) {}
  rpc GetWatchState(Empty) returns (stream ArgusdHandle) {}
  rpc RecordMetrics(Empty) returns (stream ArgusdMetricsHandle) {}
}

message ArgusdConfig {
  string name = 1;
  string nodeName = 2;
  string podName = 3;
  repeated int32 pid = 4;
  repeated string cid = 5;
  repeated ArgusWatcherSubject subject = 6;
  string logFormat = 7;
}

message ArgusWatcherSubject {
  repeated string path = 1;
  repeated string event = 2;
  repeated string ignore = 3;
  bool onlyDir = 4;
  bool recursive = 5;
  int32 maxDepth = 6;
  bool followMove = 7;
  map<string, string> tags = 8;
}

message ArgusdHandle {
  string nodeName = 1;
  string podName = 2;
  repeated int32 pid = 3;
}

message ArgusdMetricsHandle {
  string argusWatcher = 1;
  string event = 2;
  string nodeName = 3;
}

message Empty {}
