syntax = "proto3";

package fim;

service Fimd {
  rpc CreateWatch(FimdConfig) returns (FimdHandle) {}
  rpc DestroyWatch(FimdConfig) returns (FimdHandle) {}
}

message FimdConfig {
  string containerId = 1;
  repeated FimWatcherSubject subjects = 2;
}

message FimWatcherSubject {
  repeated string paths = 1;
  repeated string events = 2;
}

message FimdHandle {
  string hostUid = 1;
  repeated int32 pids = 2;
  repeated int32 processEventfds = 3;
}
